--- a/config/templates/store/base.html
+++ b/config/templates/store/base.html
@@ -69,7 +69,7 @@ $(document).ready(function() {
 	<div class="container">
 <div class="row align-items-center">
 	<div class="col-lg-2 col-md-3 col-6">
-		<a href="./" class="brand-wrap">
+		<a href="{% url 'index' %}" class="brand-wrap">
 			<img class="logo" src="{% static 'images/logo.png' %}">
 		</a> <!-- brand-wrap.// -->
 	</div>
@@ -88,9 +88,9 @@ $(document).ready(function() {
 	</div> <!-- col.// -->
 	<a href="{% url 'store' %}" class="btn btn-outline-primary">Store</a>
 	<div class="col-lg  col-md-6 col-sm-12 col">
-		<form action="#" class="search">
+		<form action="{% url 'search' %}" class="search" method="GET">
 			<div class="input-group w-100">
-			    <input type="text" class="form-control" style="width:60%;" placeholder="Search">
+			    <input type="text" class="form-control" style="width:60%;" placeholder="Search" name="keyword">
 			    
 			    <div class="input-group-append">
 			      <button class="btn btn-primary" type="submit">
@@ -102,11 +102,13 @@ $(document).ready(function() {
 	</div> <!-- col.// -->
 	<div class="col-lg-3 col-sm-6 col-8 order-2 order-lg-3">
 				<div class="d-flex justify-content-end mb-3 mb-lg-0">
+					{% if user.is_authenticated %}
+					
 					<div class="widget-header">
-						<small class="title text-muted">Welcome guest!</small>
+						<small class="title text-muted">Welcome {{user.first_name}}!</small>
 						<div> 
-							<a href="./signin.html">Sign in</a> <span class="dark-transp"> | </span>
-							<a href="./register.html"> Register</a>
+							<a href="#">Dashbord</a> <span class="dark-transp"> | </span>
+							<a href="{% url 'logout' %}"> Logout</a>
 						</div>
 					</div>
 					<a href="{% url 'cart'  %}" class="widget-header pl-3 ml-3">
@@ -114,6 +116,32 @@ $(document).ready(function() {
 						<span class="badge badge-pill badge-danger notify">{{ cart_count }}</span>
 					</a>
 				</div> <!-- widgets-wrap.// -->
+				{% else %}
+
+				<div class="widget-header d-flex justify-content-between align-items-center">
+    <div>
+        <small class="text-muted">Welcome guest!</small>
+        <div>
+            <a href="{% url 'login' %}">Sign in</a>
+            <span class="text-muted"> | </span>
+            <a href="{% url 'register' %}">Register</a>
+        </div>
+    </div>
+
+    <div>
+        <a href="{% url 'cart' %}" class="d-flex align-items-center position-relative">
+            <div class="icon icon-sm rounded-circle border d-flex align-items-center justify-content-center" style="width: 36px; height: 36px;">
+                <i class="fa fa-shopping-cart"></i>
+            </div>
+            <span class="badge badge-pill badge-danger position-absolute top-0 start-100 translate-middle">{{ cart_count }}</span>
+        </a>
+    </div>
+</div>
+
+				
+				{% endif %}
+
+
 			</div> <!-- col.// -->
 </div> <!-- row.// -->
 	</div> <!-- container.// -->
